--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container-fluid text-center" style="background-color: #c04d4d">
-    <h2 style="color: cornsilk;"><img src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\logo.jpg" alt="no image found" height="100px" width="120px"><b>KAVIKULGURU INSTITUTE OF TECHNOLOGY AND SCIENCE</b><img src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\logo2.jpg" alt="" height="100px" width="120px"></h2>
+    <h2 style="color: cornsilk;"><img src="pics.jpg/logo.jpg" alt="no image found" height="100px" width="120px"><b>KAVIKULGURU INSTITUTE OF TECHNOLOGY AND SCIENCE</b><img src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\logo2.jpg" alt="" height="100px" width="120px"></h2>
     <h6 style="color: antiquewhite;"><marquee>Permanently affiliated To RTM Nagpur University and Approved by AICTE,New Delhi</marquee></h6>
    <h6 style="color: bisque;"><marquee>NAAC ACCREDITED WITH 'B++' GRADE, AN ISO 9001:2015 CERTIFIED INSTITUTE
     ACCREDITED TWICE BY NBA
