--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <a href="about.html" class="btn btn-primary">See college</a>
               </div>
               <video class="video-fluid z-depth-1" autoplay loop controls muted>
-                <source src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\KITS College promo1.mp4" type="video/mp4" />
+                <source src="pics/KITS College promo1.mp4" type="video/mp4" />
               </video>
             </div>
             </div>
@@ -139,7 +139,7 @@
               <div class="col-md-6" style="float:left">
                <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\Rajeshwara-rao.jpg" alt="Card image cap">
+                    src="pics/Rajeshwara-rao.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title" style="background-color: cyan;"><b>KITS</b></h4>
                     <p class="card-text"><i>The Vodithala Education Society was established with the objective to establish, aid and maintain Educational and other Institutions
@@ -152,7 +152,7 @@
               <div class="col-md-6" style="float:left">
                 <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\8cb984fd-3ae1-47f8-b93d-184e4a79f767.jpg" alt="Card image cap">
+                    src="pics/8cb984fd-3ae1-47f8-b93d-184e4a79f767.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title" style="background-color: cyan;"><b>NCC AND NSS</h4>
                     <p class="card-text"><i>A special training session on “weapon training and Map reading” conducted by Army staff for NCC cadets on 16th February 2020
@@ -173,7 +173,7 @@
               <div class="col-md-6" style="float:left">
                 <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\download (7).jpg" alt="Card image cap">
+                    src="pics/download (7).jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">LIBRARY</h4>
                     <p class="card-text"><i>The library is said to be an axle in any Educational Institute, where all other activities rotate around it
