--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <div class="col-md-3" style="float:left">
                 <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\download (14).jpg" alt="Card image cap">
+                    src="pics/download (14).jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">LIBRARY</h4>
                     <p class="card-text"><i>KITS library performs this role excellently, with wide collection of more than 60000 rare and valuable reference books, hand books whose cost estimated to be around 1.5 crores.</i></p>
@@ -268,7 +268,7 @@
               <div class="col-md-3" style="float:left">
                 <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\download (15).jpg" alt="Card image cap">
+                    src="pics/download (15).jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">HOSTELS</h4>
                     <p class="card-text"><i>KITS, Ramtek, being located in a rural area hostel accommodation is planned and provided to meet the demands of the students by the VODITHALA EDUCATION SOCIETY.</i></p>
@@ -280,7 +280,7 @@
                <div class="col-md-3" style="float:left">
                <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\camps.jpg" alt="Card image cap">
+                    src="pics/camps.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">TRAINING AND PLACEMENTS</h4>
                     <p class="card-text"><i>Training & Placement Cell is active in conducting training and in placing the students on and off the campus in different orgainisation and companies..</i></p>
@@ -298,7 +298,7 @@
               <div class="col-md-3" style="float:left">
                 <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\CSE.jpg" alt="Card image cap">
+                    src="pics/CSE.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">KITS GALLERY</h4>
                     <p class="card-text"><i>kits college is around 50 acras of land, a beautiful and peaceful.</i></p>
@@ -322,7 +322,7 @@
               <div class="col-md-3" style="float:left">
                 <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\download (16).jpg" alt="Card image cap">
+                    src="pics\download (16).jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">CONTACT US</h4>
                     <p class="card-text"><i>Kavikulguru Institute of Technology And Science</i>
@@ -338,7 +338,7 @@
               <div class="col-md-3" style="float:left">
                 <div class="card mb-2">
                   <img class="card-img-top"
-                    src="C:\Users\lenovo\Desktop\MONIKA'S\website\pics.jpg\images (7).jpg" alt="Card image cap">
+                    src="pics\images (7).jpg" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">STUDET REGISTRATION</h4>
                     <p class="card-text"><i>student can register by filling the forms</i>.</p>
